{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 73,
  "lineage": "f9dff089-971f-aeee-ae44-7fbc44fe496a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_kubernetes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-17T09:11:52.132-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cedar-abacus-480412-e1/global/firewalls/allow-k8s-internal",
            "log_config": [],
            "name": "allow-k8s-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "cedar-abacus-480412-e1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/global/firewalls/allow-k8s-internal",
            "source_ranges": null,
            "source_service_accounts": null,
            "source_tags": [
              "kube-node"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-17T09:11:52.104-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cedar-abacus-480412-e1/global/firewalls/allow-ssh-external",
            "log_config": [],
            "name": "allow-ssh-external",
            "network": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "cedar-abacus-480412-e1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/global/firewalls/allow-ssh-external",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251212",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/zones/europe-west3-a/disks/kube-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-17T09:11:53.767-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cedar-abacus-480412-e1/zones/europe-west3-a/instances/kube-master",
            "instance_id": "8741224014928632502",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "TthfKdYBodg=",
            "metadata_startup_script": "#!/bin/bash\nset -e\nexec \u003e \u003e(tee /var/log/startup-script.log)\nexec 2\u003e\u00261\n\necho \"--- Installing Prerequisites ---\"\nsudo apt-get update\nsudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release\n\n# Install containerd (recommended over full Docker for K8s)\nsudo mkdir -p /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\necho \"de [...]
            "name": "kube-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.185.130.137",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/global/networks/default",
                "network_ip": "10.156.0.44",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "cedar-abacus-480412-e1"
              }
            ],
            "project": "cedar-abacus-480412-e1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/zones/europe-west3-a/instances/kube-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server",
              "kube-node",
              "master"
            ],
            "tags_fingerprint": "GY_fEho0gS0=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251212",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/zones/europe-west3-a/disks/kube-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-12-17T09:11:54.121-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cedar-abacus-480412-e1/zones/europe-west3-a/instances/kube-worker",
            "instance_id": "4104644774075521718",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-standard-4",
            "metadata_fingerprint": "BLHj_oLvecY=",
            "metadata_startup_script": "#!/bin/bash\nset -e\nsudo apt-get update\nsudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release\nsudo mkdir -p /etc/apt/keyrings\ncurl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg\necho \"deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable\" | sudo tee /etc/apt/sources.list.d/d [...]
            "name": "kube-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.185.192.172",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/global/networks/default",
                "network_ip": "10.156.0.45",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/regions/europe-west3/subnetworks/default",
                "subnetwork_project": "cedar-abacus-480412-e1"
              }
            ],
            "project": "cedar-abacus-480412-e1",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cedar-abacus-480412-e1/zones/europe-west3-a/instances/kube-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kube-node",
              "worker"
            ],
            "tags_fingerprint": "gi-oV4Z9U_g=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-west3-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}